--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Properties 4 Creation - Veteran Housing Solutions",
-  "short_name": "P4C",
+  "name": "Properties 4 Creations - Veteran Housing Solutions",
+  "short_name": "Properties 4 Creations",
   "description": "Expert renovations and housing solutions for veterans. Get cash offers for properties and connect veterans with Section 8 eligible housing.",
   "start_url": "/",
   "display": "standalone",
