--- a/package.json
+++ b/package.json
@@ -6,14 +6,22 @@
   "scripts": {
     "serve": "npx serve . -p 3000 -s",
     "build-images": "node scripts/build-images.js",
+    "build-css": "npx tailwindcss -i ./css/input.css -o ./css/tailwind.css",
+    "watch-css": "npx tailwindcss -i ./css/input.css -o ./css/tailwind.css --watch",
     "test": "node validation-test.js",
     "test:all": "run-validation.bat && start test-runner.html",
     "lint": "echo 'Linting complete - no issues'"
   },
   "devDependencies": {
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "tailwindcss": "^3.4.0"
   },
-  "keywords": ["housing", "veterans", "section8", "east-texas"],
+  "keywords": [
+    "housing",
+    "veterans",
+    "section8",
+    "east-texas"
+  ],
   "author": "Properties 4 Creations",
   "license": "MIT"
 }
