migrated to eleventy structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,24 @@
-# --- OS & Editor ---
+# Dependencies
+node_modules/
+
+# Build Output (Eleventy generates this)
+dist/
+_site/
+
+# Environment & System
 .DS_Store
 Thumbs.db
-.vscode/
-*.swp
+.env
 
-# --- Logs & Reports ---
-*.log
+# Editor config
+.vscode/
+.idea/
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-audit-report.json
 
-# --- Backups & Temp Files ---
+# Temporary files
 *.bak
 *.tmp
-
-# --- Build & Bundled Artifacts ---
-css/main.min.css
-js/bundle.min.js
-
-# --- Scripts (local dev only, not production) ---
-scripts/*.ps1
-scripts/*.bat
-
-# --- Node / Tooling (if added later) ---
-node_modules/
-dist/
-
-# --- Environment Files ---
-CNAME
