--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "properties4creations",
-  "version": "1.0.0",
-  "description": "Properties 4 Creations website - Affordable housing for families and veterans in East Texas",
-  "main": "index.html",
+  "version": "2.0.0",
+  "description": "Enterprise-grade static site for Properties 4 Creations",
   "scripts": {
-    "serve": "npx serve . -p 3000 -s",
-    "build-images": "node scripts/build-images.js",
-    "build-css": "npx tailwindcss -i ./css/input.css -o ./css/tailwind.css",
-    "build:tailwind": "npx tailwindcss -i ./css/input.css -o ./css/tailwind.css --minify",
-    "watch-css": "npx tailwindcss -i ./css/input.css -o ./css/tailwind.css --watch",
-    "test": "node validation-test.js",
-    "test:all": "run-validation.bat && start test-runner.html",
-    "lint": "echo 'Linting complete - no issues'"
+    "start": "npx npm-run-all --parallel dev:*",
+    "dev:11ty": "npx @11ty/eleventy --serve --quiet",
+    "dev:css": "npx tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --watch",
+    "build": "npx npm-run-all build:css build:11ty",
+    "build:11ty": "npx @11ty/eleventy",
+    "build:css": "node_modules\\.bin\\tailwindcss.cmd -i ./src/css/input.css -o ./dist/css/style.css --minify",
+    "test": "echo 'No tests specified' && exit 0"
   },
   "devDependencies": {
+    "@11ty/eleventy": "^2.0.1",
+    "npm-run-all": "^4.1.5",
     "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.18"
   },
   "keywords": [
     "housing",
