--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "2.0.0",
   "description": "Enterprise-grade static site for Properties 4 Creations",
   "scripts": {
-    "start": "npx npm-run-all --parallel dev:*",
-    "dev:11ty": "npx @11ty/eleventy --serve --quiet",
-    "dev:css": "npx tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --watch",
-    "build": "npx npm-run-all build:css build:11ty",
-    "build:11ty": "npx @11ty/eleventy",
-    "build:css": "node_modules\\.bin\\tailwindcss.cmd -i ./src/css/input.css -o ./dist/css/style.css --minify",
+    "start": "npm-run-all --parallel dev:*",
+    "dev:11ty": "eleventy --serve --quiet",
+    "dev:css": "tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --watch",
+    "build": "npm-run-all build:css build:11ty",
+    "build:11ty": "eleventy",
+    "build:css": "tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --minify",
     "test": "echo 'No tests specified' && exit 0"
   },
   "devDependencies": {
