--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "svg.preview.background": "transparent"
+    "svg.preview.background": "transparent",
+    "typescript.inlayHints.enumMemberValues.enabled": false
 }
