--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "svg.preview.background": "transparent",
-    "typescript.inlayHints.enumMemberValues.enabled": false
+    "typescript.inlayHints.enumMemberValues.enabled": false,
+    "yaml.validate": false
 }
