deploy and build artifacts

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,16 +1,8 @@
 {
-    "overrides": [
-        {
-            "files": "*.html",
-            "options": {
-                "parser": "html"
-            }
-        },
-        {
-            "files": "*.yaml",
-            "options": {
-                "yamlBracketSpacing": false
-            }
-        }
-    ]
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "useTabs": false,
+  "printWidth": 100,
+  "trailingComma": "es5"
 }
