--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "npm-run-all --parallel dev:*",
     "dev:11ty": "eleventy --serve --quiet",
     "dev:css": "tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --watch",
-    "build": "npm-run-all build:css build:seo build:sw build:11ty",
+    "build": "npm run build:validate && npm-run-all build:css build:seo build:sw build:11ty",
+    "build:validate": "node scripts/validate-properties.js",
     "build:11ty": "eleventy",
     "build:css": "tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --minify",
     "build:seo": "node scripts/generate-sitemap.js",
