--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
     "@playwright/test": "^1.57.0",
+    "axe-playwright": "^2.2.2",
     "critters": "^0.0.23",
     "eslint": "^9.39.1",
     "npm-run-all": "^4.1.5",
