--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "build:css": "tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --minify",
     "build:seo": "node scripts/generate-sitemap.js",
     "build:sw": "npx workbox generateSW workbox-config.js",
-    "test": "playwright test",
+    "test": "npm-run-all test:basic test:comprehensive test:performance",
+    "test:basic": "playwright test tests/basic.spec.js",
+    "test:comprehensive": "playwright test tests/comprehensive.spec.js",
+    "test:accessibility": "playwright test tests/accessibility.spec.js",
+    "test:performance": "playwright test tests/performance.spec.js",
+    "test:full": "playwright test --project=chromium",
+    "test:all": "npm-run-all test:basic test:comprehensive test:accessibility test:performance",
     "test:install": "playwright install",
     "lint:js": "eslint src/js/**/*.js tests/**/*.js scripts/**/*.js",
     "lint:css": "stylelint src/css/**/*.css",
