--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "start": "npm-run-all --parallel dev:*",
     "dev:11ty": "eleventy --serve --quiet",
     "dev:css": "tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --watch",
-    "build": "npm run build:validate && npm-run-all build:css build:seo build:sw build:11ty",
+    "build": "npm run build:validate && npm-run-all build:css build:seo build:sw build:11ty audit:links",
     "build:validate": "node scripts/validate-properties.js",
     "build:11ty": "eleventy",
     "build:css": "tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --minify",
     "build:seo": "node scripts/generate-sitemap.js",
     "build:sw": "npx workbox generateSW workbox-config.js",
-    "test": "npm-run-all test:basic test:comprehensive test:performance",
+    "test": "npm-run-all lint format test:basic test:comprehensive test:performance",
     "test:basic": "playwright test tests/basic.spec.js",
     "test:comprehensive": "playwright test tests/comprehensive.spec.js",
     "test:accessibility": "playwright test tests/accessibility.spec.js",
@@ -23,7 +23,9 @@
     "lint:js": "eslint src/js/**/*.js tests/**/*.js scripts/**/*.js",
     "lint:css": "stylelint src/css/**/*.css",
     "lint": "npm run lint:js && npm run lint:css",
-    "format": "prettier --write \"**/*.{js,json,css,md,html,njk}\""
+    "format": "prettier --write \"**/*.{js,json,css,md,html,njk}\"",
+    "audit:links": "node scripts/audit-links.js",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
@@ -31,6 +33,9 @@
     "axe-playwright": "^2.2.2",
     "critters": "^0.0.23",
     "eslint": "^9.39.1",
+    "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
+    "jsdom": "^24.1.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.7.3",
     "sharp": "^0.33.5",
