update broken code

--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "Enterprise-grade static site for Properties 4 Creations",
   "scripts": {
     "start": "npm-run-all --parallel dev:*",
-    "dev:11ty": "eleventy --serve --quiet",
-    "dev:css": "tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --watch",
-    "build": "npm run build:validate && npm-run-all build:css build:seo build:sw build:11ty audit:links",
+    "dev:11ty": "eleventy --serve --quiet --incremental",
+    "dev:css": "tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --watch --minify",
+    "build": "npm run build:validate && npm-run-all --parallel build:css build:seo build:sw --serial build:11ty audit:links",
     "build:validate": "node scripts/validate-properties.js",
-    "build:11ty": "eleventy",
+    "build:11ty": "eleventy --output=./dist",
     "build:css": "tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --minify",
     "build:seo": "node scripts/generate-sitemap.js",
     "build:sw": "npx workbox generateSW workbox-config.js",
-    "test": "npm-run-all lint format test:basic test:comprehensive test:performance",
+    "clean": "rd /s /q dist 2>nul && mkdir dist",
+    "prebuild": "npm run clean",
+    "test": "npm-run-all --parallel lint format --serial test:all",
     "test:basic": "playwright test tests/basic.spec.js",
     "test:comprehensive": "playwright test tests/comprehensive.spec.js",
     "test:accessibility": "playwright test tests/accessibility.spec.js",
@@ -22,7 +24,7 @@
     "test:install": "playwright install",
     "lint:js": "eslint src/js/**/*.js tests/**/*.js scripts/**/*.js",
     "lint:css": "stylelint src/css/**/*.css",
-    "lint": "npm run lint:js && npm run lint:css",
+    "lint": "npm-run-all --parallel lint:js lint:css",
     "format": "prettier --write \"**/*.{js,json,css,md,html,njk}\"",
     "audit:links": "node scripts/audit-links.js",
     "prepare": "husky install"
@@ -38,6 +40,7 @@
     "jsdom": "^24.1.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.7.3",
+    "rimraf": "^6.1.2",
     "sharp": "^0.33.5",
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.1",
