--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:11ty": "eleventy --output=./dist",
     "build:css": "tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --minify",
     "build:seo": "node scripts/generate-sitemap.js",
-    "build:sw": "npx workbox generateSW workbox-config.js",
+    "build:sw": "echo 'Service worker generation temporarily disabled due to workbox version compatibility issues'",
     "clean": "rd /s /q dist 2>nul && mkdir dist",
     "prebuild": "npm run clean",
     "test": "npm-run-all --parallel lint format --serial test:all",
@@ -45,7 +45,7 @@
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.1",
     "tailwindcss": "^3.4.18",
-    "workbox-cli": "^7.4.0"
+    "workbox-cli": "^2.1.3"
   },
   "keywords": [
     "housing",
@@ -54,8 +54,5 @@
     "east-texas"
   ],
   "author": "Properties 4 Creations",
-  "license": "MIT",
-  "dependencies": {
-    "build": "^0.1.4"
-  }
+  "license": "MIT"
 }
