--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:11ty": "eleventy --output=./dist",
     "build:css": "tailwindcss -i ./src/css/input.css -o ./dist/css/style.css --minify",
     "build:seo": "node scripts/generate-sitemap.js",
-    "build:sw": "echo 'Service worker generation temporarily disabled due to workbox version compatibility issues'",
+    "build:sw": "node scripts/generate-sw.js",
     "clean": "rimraf dist && mkdir dist",
     "prebuild": "npm run clean",
     "test": "npm-run-all --parallel lint format --serial test:all",
@@ -44,8 +44,7 @@
     "sharp": "^0.33.5",
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.1",
-    "tailwindcss": "^3.4.18",
-    "workbox-cli": "^2.1.3"
+    "tailwindcss": "^3.4.18"
   },
   "keywords": [
     "housing",
